k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konnect2es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konnect2es
  template:
    metadata:
      labels:
        app: konnect2es
    spec:
      containers:
      - name: konnect2es
        image: <input your image>
        ports:
        - containerPort: 5000
