k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konnect2es-service
spec:
  selector:
    app: konnect2es
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
