k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konnect2es-ingress
  annotations:
    cert-manager.io/issuer: konnect2es-issuer
    kubernetes.io/tls-acme: "true"    
spec:
  ingressClassName: kong
  rules:
  - host: konnect2es.<your domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: konnect2es-service
            port:
              number: 80
  tls:
  - hosts:
    - konnect2es.<your domain>
    secretName: konnect2es-general-ca
